[package]
name = "rust_win"
version = "0.1.0"
edition = "2024"

[dependencies]
[[bin]]
name="init_var"
path="src/init_var.rs"

[[bin]]
name="mut_var"
path="src/mut_var.rs"

[[bin]]
name="scope"
path="src/scope.rs"

[[bin]]
name="define_x"
path="src/define_x.rs"

[[bin]]
name="exercise1"
path="src/exercise1.rs"

[[bin]]
name="exercise2"
path="src/exercise2.rs"

[[bin]]
name="unused_var"
path="src/unused_var.rs"

[[bin]]
name="sep_var"
path="src/sep_var.rs"

[[bin]]
name="destruct_assignment"
path="src/destruct_assignment.rs"