[package]
name = "rust_win"
version = "0.1.0"
edition = "2024"

[dependencies]
[[bin]]
name="init_var"
path="src/init_var.rs"

[[bin]]
name="mut_var"
path="src/mut_var.rs"

[[bin]]
name="scope"
path="src/scope.rs"

[[bin]]
name="define_x"
path="src/define_x.rs"

[[bin]]
name="exercise1"
path="src/exercise1.rs"

[[bin]]
name="exercise2"
path="src/exercise2.rs"

[[bin]]
name="unused_var"
path="src/unused_var.rs"

[[bin]]
name="sep_var"
path="src/sep_var.rs"

[[bin]]
name="destruct_assignment"
path="src/destruct_assignment.rs"

[[bin]]
name="exercise3"
path="src/exercise3.rs"

[[bin]]
name="exercise4"
path="src/exercise4.rs"

[[bin]]
name="exercise5"
path="src/exercise5.rs"

[[bin]]
name="exercise6"
path="src/exercise6.rs"

[[bin]]
name="exercise7"
path="src/exercise7.rs"

[[bin]]
name="floating_point"
path="src/floating_point.rs"

[[bin]]
name="exercise8"
path="src/exercise8.rs"